stop inline images from causing page jumps

--- a/files/assets/css/main.css
+++ b/files/assets/css/main.css
@@ -7356,3 +7356,8 @@ button, .btn {
 	object-fit: contain;
 	object-position: left;
 }
+
+.img {
+	height: 100%;
+	width: auto;
+}
